UTM_conversion/log/build_2020-10-17_12-12-13/latlong_utm/stderr.log
  File "/home/sanket/data_conv/install/latlong_utm/lib/python3.8/site-packages/latlong_utm/utm_to_latlong.py", line 50
    global l
    ^
SyntaxError: name 'l' is used prior to global declaration

